--- a/rules-processing-server/pom.xml
+++ b/rules-processing-server/pom.xml
@@ -9,14 +9,59 @@
     <version>5.3.6-SNAPSHOT</version>
   </parent>
 
-  <artifactId>drools-camel-server</artifactId>
-  <packaging>war</packaging>
+
+  <artifactId>rules-processing-server</artifactId>
+ <packaging>war</packaging>
   
-  <name>Drools Camel server</name>
+  <name>Drools Camel Processor</name>
   <description>A webapp that runs the Drools Camel integration.</description>
   
   <build>
-    <finalName>drools-server</finalName>
+    <finalName>rules-processing-server</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+      </plugin>
+      <plugin>
+          <groupId>org.jboss.as.plugins</groupId>
+          <artifactId>jboss-as-maven-plugin</artifactId>
+          <version>7.1.1.Final</version>
+      </plugin>
+     
+<plugin>
+    <groupId>org.apache.cxf</groupId>
+    <artifactId>cxf-codegen-plugin</artifactId>
+    <executions>
+        <execution>
+            <id>generate-sources</id>
+            <phase>generate-sources</phase>
+            <configuration>
+                <sourceRoot>${project.build.directory}/generated/cxf</sourceRoot>
+                   <defaultOptions> 
+                        <autoNameResolution>true</autoNameResolution> 
+                    </defaultOptions>
+                <wsdlOptions>
+                    <wsdlOption>
+                        <wsdl>${basedir}/src/main/resources/soap-application.wsdl</wsdl>
+                        <bindingFiles>
+        					<bindingFile>${basedir}/src/main/resources/acord_binding.xml</bindingFile>
+      					</bindingFiles>
+                    </wsdlOption>
+                </wsdlOptions>
+            </configuration>
+            <goals>
+                <goal>wsdl2java</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
+
+    </plugins>
   </build>
 
   <dependencies>
@@ -66,6 +111,18 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
+      <!--  
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.camel</groupId>
+          <artifactId>osgi</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.camel</groupId>
+          <artifactId>blueprint</artifactId>
+        </exclusion>
+      </exclusions>
+      -->
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
